<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teamig.whatswap.fragments.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/settings_header_ImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/settings_header_img"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile_pic"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_below="@+id/settings_header_ImageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-60dp"
                android:elevation="5dp"
                android:padding="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_profile_pic"/>

            <RelativeLayout
                android:id="@+id/settings_profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_header_ImageView"
                android:background="#ebca0707"
                android:elevation="4dp"
                android:paddingBottom="24dp">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="76dp"
                    android:text="@string/profile_username"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_community"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_username"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:text="@string/profile_community"
                    android:textColor="#fff"
                    android:textSize="14sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_profile_layout"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/settings_btn_update_profile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#fff"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/settings_update_profile" />

                <Button
                    android:id="@+id/settings_btn_change_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:background="#fff"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/settings_change_password" />

                <Button
                    android:id="@+id/settings_btn_logout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#fff"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/settings_btn_SignOut"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</FrameLayout>
